--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,13 @@ jobs:
         name: klippup
         path: klippup
         retention-days: 5
+        
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: klippup
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
